--- a/css101.css
+++ b/css101.css
@@ -1,12 +1,56 @@
-/*The header element should have a 1px border. Color, you pick*/
+  /*The header element should have a 1px border. Color, you pick*/
 header {
   border: 1px solid red;
 }
 
  
-/*  1. Convert the ul in the navigation element into a series of horizontal links with # as the href value, without a bullets, and have some space between them horizontally.
-  2. Ensure that the navigation is semantically marked as such (i.e. wrap it in the correct HTML tag)
-*/
-header ul {
+  /*  1. Convert the ul in the navigation element into a series of horizontal links with # as the href value, without a bullets, and have some space between them horizontally.
+  */
+nav ul li {
+  display: inline;
+  list-style-type: none;
+  margin-left: 30px;
+}
+
+/*I couldn't get the inserted content to act like actual tags.*/
+/*nav ul li::before {
+  content: "<a href="#">"
+}
+nav ul li::after {
+  content: "</a>"
+}*/
+
+
+  /*  1. Any text in an element with class "disabled" should be colored grey, unless it is inside an anchor tag. If inside an anchor, it should be colored purple.*/
+.disabled {
+  color: grey;
+}
+a .disabled {
+  color: purple;
+}
+
+  /*  2. Any text inside an element with a class of "active" should be colored yellow.*/
+.active {
+  color: yellow;
+}
+  /*1. Make the "I'm red" text colored red*/
+.parent div div:first-of-type {
   color: red;
+}
+  /*2. Make the "I'm blue" text colored blue*/
+.parent div div:last-of-type {
+  color: blue;
+}
+  /*3. The sibling h4 of the red element should have a background color of red*/
+.parent div div:first-of-type + h4{
+  background-color: red;
+}
+  /*4. The sibling h4 of the blue element should have background color of blue*/
+.parent div div:last-of-type +h4 {
+  background-color: blue;
+}
+  /*5. An h4 that is a direct child of grandparent should have a 1px border with rounded corners.*/
+.grandparent > h4 {
+  border: 1px solid black;
+  border-radius: 5px;
 }
